# TextGO

./: .pre-commit-config.yaml  LICENSES.md  README.md  README.zh-CN.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.js
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  bug_report.zh-CN.md  bug_report.zh-CN.yml  feature_request.md  feature_request.zh-CN.md
.github/workflows/: release.yml
messages/: en.json  zh-CN.json  zh-cn.json
project.inlang/: settings.json
scripts/: scan-packages.ts
src/: app.css  globals.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  handlers.rs  lib.rs  platform.rs
src-tauri/src/commands/: ai_cache.rs  clipboard.rs  executor.rs  identifier.rs  keyboard.rs  permission.rs  selection.rs  shortcut.rs  tray.rs  typer.rs  window.rs
src-tauri/src/handlers/: keyboard.rs  mouse.rs
src-tauri/src/platform/: macos.rs  windows.rs
src/lib/: ai-cache.ts  classifier.ts  constants.ts  constraint.ts  detector.ts  evaluator.ts  executor.ts  helpers.ts  icons.ts  manager.ts  matcher.ts  phosphor.ts  shortcut.ts  stores.svelte.ts  types.d.ts  utils.ts
src/lib/components/: Alert.svelte  BWList.svelte  Binder.svelte  Button.svelte  CodeMirror.svelte  Confirm.svelte  Icon.svelte  IconSelector.svelte  Kbd.svelte  Label.svelte  List.svelte  Modal.svelte  Model.svelte  Prompt.svelte  Radio.svelte  Recorder.svelte  Regexp.svelte  Rule.svelte  Script.svelte  Searcher.svelte  Setting.svelte  Shortcut.svelte  Title.svelte  Toggle.svelte  Updater.svelte  index.ts
src/lib/icons/: Anthropic.svelte  Deno.svelte  index.ts  (+19 more)
src/routes/: +layout.svelte  +layout.ts
(+23 files in other folders)
