[package]
name = "text-go"
version = "0.4.0"
description = "A customizable text selection popup tool"
authors = ["Xylitol <jam.xylitol@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "textgo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-os = "2.3.2"
tauri-plugin-store = "2.4.1"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-opener = "2.5.2"
tauri-plugin-updater = "2.9.0"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-single-instance = "2.3.6"
tauri-plugin-log = { version = "2.7.1", features = ["colored"] }
log = "0.4.29"
fern = "0.7.1"
tokio = { version = "1.48", features = ["process", "rt-multi-thread"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
clipboard-rs = "0.3.1"
enigo = "0.6.1"
rdev = { git = "https://github.com/Narsil/rdev", rev = "c14f2dc" }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.1"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", rev = "da9c9a8" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = ">=0.59.0, <=0.62.2", features = [
  "Win32_System_Com",
  "Win32_UI_Accessibility",
  "Win32_UI_WindowsAndMessaging"
] }
